--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.3'
+        implementation 'com.startapp:inapp-sdk:4.6.+'
     }
 }
 
